Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Exinos Gift House - Where Stories Begin</title>
     <meta name="description" content="Premium gift store offering both physical and digital gifting products. Custom craftsmanship meets modern technology." />
     <meta name="author" content="Exinos Gift House" />
+
+    <link rel="icon" type="image/png" href="exinos-icon.png" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
